/*
Copyright 2022 Gravitational, Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

import React from 'react';
import { render, screen } from 'design/utils/testing';
import {
  WithToken,
  Processing,
  WithoutTokenLocal,
  WithoutTokenSSO,
} from './AddDatabase.story';

test('render without token', async () => {
  render(<WithoutTokenLocal />);
  expect(screen.getByTestId('Modal')).toMatchSnapshot();
});

test('render processing', async () => {
  render(<Processing />);
  expect(screen.getByTestId('Modal')).toMatchSnapshot();
});

test('render with token', async () => {
  render(<WithToken />);
  expect(screen.getByTestId('Modal')).toMatchSnapshot();
});

test('render without token with SSO auth', async () => {
  render(<WithoutTokenSSO />);
  expect(screen.getByTestId('Modal')).toMatchSnapshot();
});
